--- a/亲身体验函数柯里化.md
+++ b/亲身体验函数柯里化.md
@@ -93,20 +93,71 @@ el.rules.longerThan6 = generalRules.minLength(6)
 
 ```
 
-`generalRules.minLength`这个函数执行以后返回的是一个函数，这个函数在它的闭包中包含了预先设定的参数`6`，那么执行函数时，就会执行与6的比较。
-
-这个过程就是 _函数柯里化_ 。`curry`的概念就是：
+`generalRules.minLength`这个函数执行以后返回的是一个函数，这个函数在它的闭包中包含了预先设定的参数`6`，那么执行函数时，就会执行与6的比较。这个过程就是 _函数柯里化_ 。所谓的`curry`的就是：
 
 > 只传递给函数一部分参数来调用它，让它返回一个函数去处理剩下的参数。
 
-```javascript
-function curry(fn){
-    var args = [].slice.call(arguments, 1)
-    return function(){
-        var innerArgs = [].slice.call(arguments)
-        var finalArgs = args.concat(innerArgs)
+函数的柯里化有更通用的方法，即：
 
-        return fn.apply(null, args)
+```javascript
+//来自Javascript高级程序设计
+function curry(fn){
+    var args1 = [].slice.call(arguments, 1)
+    return function(){
+        var args2 = [].slice.call(arguments)
+        var finalArgs = args1.concat(args2)
+
+        return fn.apply(null, finalArgs)
     }
 }
+
 ```
+
+我们的`minLength`函数用标准的`curry`可以这么写：
+
+```javascript
+function minLength(num, value){
+  return value > num
+}
+
+var longerThan5 = curry(minLength, 5)
+
+console.log(longerThan5(6)) //true
+
+//更多的例子
+function add(a, b){
+    return a + b
+}
+
+var add2 = curry(add, 2)
+add2(3)//5
+
+function test(pattern, str){
+    return pattern.test(str)
+}
+
+var isNumber = curry(test, /\d+/)
+isNumber('1') //true
+
+var isText = curry(test, /\w+/)
+isText('wasd') //true
+
+```
+
+Javascript高级程序设计的书上给出的这个方法，有一个缺点，就是它假定所有的参数都是等效的，这在简单的`add`函数中可能没什么影响，谁写前写后都不影响结果。但是在后面我写`test`函数是如履薄冰，因为在`curry`函数内部，先传入的参数写在前面，后传入的写在后面，必须对应起来，否则会出错，这样写费心费力。所以对于一般的需求而言，简单地写一个高阶函数就完了，并不一定非要写个`curry`，方法因该用来帮助我们，而不是麻烦我们。前面的`test`函数可以简单地写成：
+
+```javascript
+
+function test(pattern){
+    return function(value){
+        return pattern.test(value)
+    }
+}
+
+var isNumber = test(/\d+/)
+var isText = test(/\w+/)
+isNumber('55') //true
+isText('wasd') //true
+
+```
+这样写简单明了，易于理解。
